Set polish as a default language and created messages.pl.yaml and messages.en.yaml. Unmade some mistakes.

--- a/templates/admin/change_password.html.twig
+++ b/templates/admin/change_password.html.twig
@@ -2,12 +2,12 @@
 
 {% block body %}
     {% if app.user %}
-        <h1>Change Password</h1>
+        <h1>{{ 'change_password'|trans }}</h1>
         {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
     {% endif %}
 
-    <a href="{{ path('app_home') }}">Come back to main page</a>
+    <a href="{{ path('app_home') }}">{{ 'back_to_main_page'|trans }}</a>
 {% endblock %}
 
