--- a/templates/bugs/_form.html.twig
+++ b/templates/bugs/_form.html.twig
@@ -14,6 +14,6 @@
 
     {{ form_row(form.updatedAt) }}
 
-    {{ form_row(form.save, {'label': 'Save'}) }}
+    {{ form_row(form.save, {'label': 'save'|trans}) }}
 
 {{ form_end(form) }}
