--- a/templates/bugs/edit.html.twig
+++ b/templates/bugs/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>Edit Bug!</h1>
+    <h1>{{ 'title_edit_bug'|trans }}</h1>
 
     {{ include('bugs/_form.html.twig') }}
 
