--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,28 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}{{ 'hello_homecontroller'|trans }}{% endblock %}
 
 {% block body %}
 
     {% if app.user %}
         <p class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            {{ 'you_are_logged_in_as'|trans }} {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">{{ 'logout'|trans }}</a>
         </p>
     {% else %}
         <p>
-            <a href="{{ path('app_login') }}">Login</a>
+            <a href="{{ path('app_login') }}">{{ 'login'|trans }}</a>
         </p>
 
     {% endif %}
 
 <div class="example-wrapper">
-    <h1>Welcome to my Mine!</h1>
-    <h3><a href="{{ path('latest_bugs') }}">See latest BUGS!</a></h3>
-    <h3><a href="{{ path('app_user_index') }}">See users!</a></h3>
-    <h3><a href="{{ path('app_project_index') }}">See project!</a></h3>
+    <h1>{{ 'welcome_to_my_mine'|trans }}</h1>
+    <h3><a href="{{ path('latest_bugs') }}">{{ 'see_latest_bugs'|trans }}</a></h3>
+    <h3><a href="{{ path('app_user_index') }}">{{ 'see_users'|trans }}</a></h3>
+    <h3><a href="{{ path('app_project_index') }}">{{ 'see_project'|trans }}</a></h3>
     {% if app.user %}
-        <h3><a href="{{ path('admin_profile') }}">Change Admin Email</a></h3>
-        <h3><a href="{{ path('admin_change_password') }}">Change Admin Password</a></h3>
+        <h3><a href="{{ path('admin_profile') }}">{{ 'change_admin_email'|trans }}</a></h3>
+        <h3><a href="{{ path('admin_change_password') }}">{{ 'change_admin_password'|trans }}</a></h3>
     {% endif %}
 </div>
 {% endblock %}
