--- a/templates/project/_delete_form.html.twig
+++ b/templates/project/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_project_delete', {'id': project.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_project_delete', {'id': project.id}) }}" onsubmit="return confirm('{{ 'are_you_sure_you_want_to_delete'|trans }}');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ project.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">{{ 'delete'|trans }}</button>
 </form>
