--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Project{% endblock %}
+{% block title %}{{ 'edit_project'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Project</h1>
+    <h1>{{ 'edit_project'|trans }}</h1>
 
     {{ include('project/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_project_index') }}">back to list</a>
+    <a href="{{ path('app_project_index') }}">{{ 'back_to_list'|trans }}</a>
 
     {{ include('project/_delete_form.html.twig') }}
 {% endblock %}
