--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Project index{% endblock %}
+{% block title %}{{ 'project_index'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Project index</h1>
+    <h1>{{ 'project_index'|trans }}</h1>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>actions</th>
+                <th>{{ 'id'|trans }}</th>
+                <th>{{ 'name'|trans }}</th>
+                <th>{{ 'description'|trans }}</th>
+                <th>{{ 'actions'|trans }}</th>
             </tr>
         </thead>
         <tbody>
@@ -22,14 +22,14 @@
                 <td>{{ project.description }}</td>
                 <td>
                     {% if app.user %}
-                    <a href="{{ path('app_project_show', {'id': project.id}) }}">show</a>
-                    <a href="{{ path('app_project_edit', {'id': project.id}) }}">edit</a>
+                    <a href="{{ path('app_project_show', {'id': project.id}) }}">{{ 'show'|trans }}</a>
+                    <a href="{{ path('app_project_edit', {'id': project.id}) }}">{{ 'edit'|trans }}</a>
                     {% endif %}
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4">{{ 'no_records_found'|trans }}</td>
             </tr>
         {% endfor %}
         </tbody>
@@ -40,9 +40,9 @@
     </div>
 
 {% if app.user %}
-    <a href="{{ path('app_project_new') }}">Create new</a>
+    <a href="{{ path('app_project_new') }}">{{ 'create_new'|trans }}</a>
 {% endif %}
 
-<a href="{{ path('app_home') }}">Come back to main page</a>
+<a href="{{ path('app_home') }}">{{ 'back_to_main_page'|trans }}</a>
 
 {% endblock %}
