--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Project{% endblock %}
+{% block title %}{{ 'new_project'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Create new Project</h1>
+    <h1>{{ 'create_new_project'|trans }}</h1>
 
     {{ include('project/_form.html.twig') }}
 
-    <a href="{{ path('app_project_index') }}">back to list</a>
+    <a href="{{ path('app_project_index') }}">{{ 'back_to_list'|trans }}</a>
 {% endblock %}
