--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -1,31 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Project{% endblock %}
+{% block title %}{{ 'project'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Project</h1>
+    <h1>{{ 'project'|trans }}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>{{ 'id'|trans }}</th>
                 <td>{{ project.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>{{ 'name'|trans }}</th>
                 <td>{{ project.name }}</td>
             </tr>
             <tr>
-                <th>Description</th>
+                <th>{{ 'description'|trans }}</th>
                 <td>{{ project.description }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_project_index') }}">back to list</a>
+    <a href="{{ path('app_project_index') }}">{{ 'back_to_list'|trans }}</a>
 
 {% if app.user %}
-    <a href="{{ path('app_project_edit', {'id': project.id}) }}">edit</a>
+    <a href="{{ path('app_project_edit', {'id': project.id}) }}">{{ 'edit'|trans }}</a>
 {% endif %}
 
     {{ include('project/_delete_form.html.twig') }}
