--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}{{ 'edit_user'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>{{ 'edit_user'|trans }}</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/_form.html.twig', {'button_label': 'update'|trans}) }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('app_user_index') }}">{{ 'back_to_list'|trans }}</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
