--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}{{ 'new_user'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
+    <h1>{{ 'new_user'|trans }}</h1>
 
     {{ include('user/_form.html.twig') }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('app_user_index') }}">{{ 'back_to_list'|trans }}</a>
 {% endblock %}
