--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,44 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}{{ 'user'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>{{ 'user'|trans }}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>{{ 'id'|trans }}</th>
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
-                <th>Email</th>
+                <th>{{ 'email'|trans }}</th>
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>Password</th>
+                <th>{{ 'password'|trans }}</th>
                 <td>{{ user.password }}</td>
             </tr>
             <tr>
-                <th>Roles</th>
+                <th>{{ 'roles'|trans }}</th>
                 <td>{{ user.roles }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>{{ 'name'|trans }}</th>
                 <td>{{ user.name }}</td>
             </tr>
             <tr>
-                <th>CreatedAt</th>
+                <th>{{ 'created_at'|trans }}</th>
                 <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('app_user_index') }}">{{ 'back_to_list'|trans }}</a>
 
 
 {% if app.user %}
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('app_user_edit', {'id': user.id}) }}">{{ 'edit'|trans }}</a>
 {% endif %}
 
     {{ include('user/_delete_form.html.twig') }}
